test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/incomplete_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  struct
  identifier(s)
  ;
  struct
  identifier(a)
  {
  struct
  identifier(s)
  identifier(g)
  ;
  }
  ;
